// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logo Basic usage 1`] = `

<bolt-logo>
  <bolt-image>
    <bolt-ratio ratio="124/33">
      <replace-with-children class="c-bolt-ratio"
                             style="padding-bottom: calc((33 / 124) * 100%); --aspect-ratio: 3.7575757575758;"
      >
        <img class="c-bolt-image__image"
             srcset="/fixtures/logo-paypal.svg"
             sizes="auto"
             src="/fixtures/logo-paypal.svg"
        >
      </replace-with-children>
    </bolt-ratio>
  </bolt-image>
</bolt-logo>

`;

exports[`logo Logo with invert set to "true" renders properly 1`] = `

<bolt-logo class="c-bolt-logo--invert">
  <bolt-image>
    <bolt-ratio ratio="124/33">
      <replace-with-children class="c-bolt-ratio"
                             style="padding-bottom: calc((33 / 124) * 100%); --aspect-ratio: 3.7575757575758;"
      >
        <img class="c-bolt-image__image"
             srcset="/fixtures/logo-paypal.svg"
             sizes="auto"
             src="/fixtures/logo-paypal.svg"
        >
      </replace-with-children>
    </bolt-ratio>
  </bolt-image>
</bolt-logo>

`;
